* Less crowded replace bar (new input textbox with XBL).
* New strings:
  - bindings.dtd: all.
* Removed strings:
  - foxreplace.dtd: replaceBarInputRegExp.label,
    replaceBarInputRegExp.accesskey.

v0.7.2 (5-8-2008)
* Corrected description in foxreplace.properties. It was cut with a \ at the
  end, creating a bug that didn't allow to import a replace list.
* New locale:
  - de-DE (by CosmicForce).
* Changed strings:
  - foxreplace.properties: extensions.fox@replace.fx.description.

v0.7.1 (15-7-2008)
* URL substitutions (thanks to Lutay Sergey).
* Replace only whole words (thanks to Пирятинский Виталий for the suggestion).
* Entitized help (thanks to Goofy).
* New locales:
  - fr-FR (by Jojaba - BabelZilla).
  - pl-PL (by Wacław Jacek).
  - pt-BR (by Alberto Eidh).
  - ru-RU (by Пирятинский Виталий).
* New strings:
  - foxreplace.dtd: replaceBarWholeWords.label, replaceBarWholeWords.accesskey.
  - options.dtd: wholeWords.label, wholeWords.accesskey, wholeWordsHeader.
  - help.dtd: everything (extracted from help.html).

v0.7.0 (8-6-2008)
* Support for regular expressions.
* HTML help.
* Own style for the close button of the replace bar.
* Compatibility with Firefox 3.0.*.
* New replacing system completely based on XPath.
* "replace" method in FxRSubstitution prototype.
* Getters in foxreplaceIO.

v0.6.1 (1-5-2008)
* Compatibility with Firefox 1.5.
* More encoded characters ('\n', '\r') in the substitution list.

v0.6.0 (30-4-2008)
* Instant replace toolbar instead of dialog.
* Auto width in options dialog (to override Noia 2.0 (eXtreme) fixed width).
* "Add" button disabled in options dialog if "Replace" field is empty.
* Updated icons for default theme.
* Updated help.
* Fixed bug with case sensitivity.
* Naming changes.
* Standard substitution prototype.
* Use of XUL commands.

v0.5.5 (23-4-2008)
* Keyboard shortcuts fix (they didn't work in some cases).

v0.5.4 (22-4-2008)
* Compatibility with Firefox 3.0b5.
* Case-sensitivity.

v0.5.3 (30-12-2007)
* Help.